--- a/assets/css/vendor_detail.css
+++ b/assets/css/vendor_detail.css
@@ -127,3 +127,12 @@
     border-width: thin;
     border-color:lightgray;
 }
+
+.vendor-package {
+    border-style: solid;
+    border-width: thin;
+    border-color:lightgray;
+    height: 120px;
+    margin: 15px 12px 12px 12px;
+    border-radius: 5px;
+}
