--- a/assets/css/vendor_detail.css
+++ b/assets/css/vendor_detail.css
@@ -56,6 +56,10 @@
     width: 75%;
 }
 
+.row>.col-4 {
+    width: 33%;
+}
+
 .sosial-content {
     letter-spacing: .2px !important;
     padding-left: 15px;
