--- a/assets/css/vendor_detail.css
+++ b/assets/css/vendor_detail.css
@@ -43,6 +43,17 @@
     width: 1000px;
 }
 
+.wrapper-list {
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+    box-sizing: border-box;
+    position: relative;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 1200px;
+}
+
 .col {
     float: left;
     box-sizing: border-box;
