--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -11,7 +11,6 @@ body {
 
 .container-card {
   width: 300px;
-  height: 500px;
   margin: 25px auto;
 }
 
@@ -56,7 +55,7 @@ body {
 .card-button {
   padding: 0.8em 5em 0.8em;
   border-radius: 3px;
-  margin: 20px 8px 8px 8px;
+  margin: 20px;
   background-color:black;
   display: inline-block;
   -webkit-transition: 0.3s;
@@ -99,7 +98,7 @@ body {
 }
 
 .card-body {
-  height: 200px;
+  height: 160px;
   background: #fff;
   border-radius: 0 0 25px 25px;
 }
